--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ configurations {
 repositories {
   maven {
     url "https://:${githubPackageRead}@maven.pkg.github.com/${githubOwner}/*"
+//    url "${nexusRepository}/maven-public/"
   }
   mavenCentral()
 }
@@ -44,6 +45,8 @@ dependencies {
   implementation "${group}:library-core-enumeration-mapper:1.0.0.RELEASE"
   implementation "${group}:library-core-exceptions:1.0.0.RELEASE"
   annotationProcessor "${group}:library-docs-search-docs:1.0.0.RELEASE"
+
+  // Web Annotation Processor: library-docs-search-docs
   annotationProcessor 'org.springframework.boot:spring-boot-starter-web'
 }
 
@@ -76,6 +79,13 @@ publishing {
         username System.getenv("GITHUB_ACTOR")
         password System.getenv("GITHUB_TOKEN")
       }
+//      url = version.endsWith('SNAPSHOT')
+//              ? "${nexusRepository}/maven-snapshots/"
+//              : "${nexusRepository}/maven-releases/"
+//      credentials {
+//        username "${nexusUsername}"
+//        password "${nexusPassword}"
+//      }
     }
   }
 
